Bug 1535140 - Slow down a bit if injecting touch inputs too fast for Windows to digest. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D27598